# abp-pressure-sensor

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE_MIT  README.md  TODO.md
openspec/changes/archive/2026-04-20-refactor-for-hal-v1/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-04-20-refactor-for-hal-v1/specs/pressure-read/: spec.md
openspec/changes/archive/2026-04-20-refactor-for-hal-v1/specs/pressure-temperature-read/: spec.md
openspec/changes/archive/2026-04-21-pressure-range-enum/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-04-21-pressure-range-enum/specs/pressure-range/: spec.md
openspec/changes/archive/2026-04-21-pressure-range-enum/specs/sensor-config/: spec.md
openspec/changes/archive/2026-04-21-refactor-api-v0-3/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-04-21-refactor-api-v0-3/specs/pressure-read/: spec.md
openspec/changes/archive/2026-04-21-refactor-api-v0-3/specs/pressure-temperature-read/: spec.md
openspec/changes/archive/2026-04-21-refactor-api-v0-3/specs/sensor-config/: spec.md
openspec/changes/archive/2026-04-21-refactor-api-v0-3/specs/temperature-resolution-read/: spec.md
openspec/specs/pressure-range/: spec.md
openspec/specs/pressure-read/: spec.md
openspec/specs/pressure-temperature-read/: spec.md
openspec/specs/sensor-config/: spec.md
openspec/specs/temperature-resolution-read/: spec.md
src/: lib.rs
